--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -2,7 +2,7 @@
 <% include ./partials/head-without-nav.ejs %>
 
 
-  <div class="container-fluid">
+<!--   <div class="container-fluid">
     <div class="text-center container">
       <div class="row">
         <h1 class="col-xs-10 col-xs-offset-1">Working Title</h1>
@@ -19,7 +19,6 @@
               </div>
               <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                 <div class="panel-body">                                  
-                 
                 </div>
               </div>
 
@@ -57,6 +56,10 @@
       </div>
     </div>
   </div>
-  
+   -->
+
+
+   <div id="landingOne" class="landing container-fluid">1</div>
+   <div id="landingTwo" class="landing container-fluid">2</div>
   
   <% include ./partials/footer %> 
