last commit before branching

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -127,7 +127,7 @@
 		                        <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 		                            <div class="panel-body">
 		                                <div class="row">
-		                                <ul id="favorite-champ-list">
+		                                <ul id="favorite_list">
 		                                	<!--ADD CHAMPIONS TO LIST HERE -->
 		                                </ul>
 		                                </div>
