--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -12,8 +12,10 @@
   <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
-<nav class="navbar navbar-default container-fluid">
-	<ul class="nav nav-pills navbar-nav">
+<nav id='nav' class="navbar navbar-default container-fluid">
+<div class="wrapper wrapper-outer container-fluid">
+<div class="wrapper wrapper-inner container-fluid">
+	<ul class="nav nav-pills">
 		<li role="presentation" class="dropdown">
 			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
 		      Endpoints <span class="caret"></span>
@@ -30,11 +32,11 @@
 	    		<li class=""><a href="#">Separated link</a></li>
 		    </ul>
 		</li>
-	</ul>	
-	<ul class="nav nav-pills navbar-nav navbar-right">
+		
+	
 		
 		<% if(currentUser) {%>
-			<li><a href="/logout">Logout:  <%= "  " + currentUser.local.email %> </a></li>
+			<li><a href="/logout">Logout:  <%= "  " + currentUser.summoner.name %> </a></li>
 		<% } else { %>
 			<li><a href="/login">Login</a></li>
             <li><a href="/signup">Signup</a></li>
@@ -58,4 +60,6 @@
 			<a href="#">Profile</a>
 		</li>
 	</ul>
+</div>	
+</div>	
 </nav>	
