--- a/views/partials/champion_search.ejs
+++ b/views/partials/champion_search.ejs
@@ -1,5 +1,5 @@
 <% if (currentUser) { %>
-<% var curUser = currentUser._id %>
+<% var thisUser = currentUser._id %>
 <% } %>
 
 
@@ -37,7 +37,7 @@
 
 				<div class=" col-xs-12 col-md-10 col-md-offset-1">
 					<% if (currentUser) { %>
-						<h5 id="current_User"> <%= curUser %> </h5>
+						<h5 id="current_User"> <%= thisUser %> </h5>
 					<% }else{ %>
 						<h5>Champions</h5>
 					<% } %>	
@@ -93,11 +93,6 @@
     									</button></span>
     							</div><!-- /input-group -->
 									
-
-
-
-
-
 
 
 									<!-- <label class="sr-only" for="champion_name" >Champion Name</label>
