--- a/views/partials/head-without-nav.ejs
+++ b/views/partials/head-without-nav.ejs
@@ -8,6 +8,7 @@
   <title>Project 2</title>
 
   <link rel="stylesheet" href="/styles/reset.css">
+  <link href="https://fonts.googleapis.com/css?family=Asul:400,700|Lato" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles/styles.css">
 </head>
