--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -8,14 +8,13 @@
   <title>Project 2</title>
 
   <link rel="stylesheet" href="/styles/reset.css">
+  <link href="https://fonts.googleapis.com/css?family=Asul:400,700|Lato" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
 <nav id='nav' class="navbar navbar-default container-fluid">
-<div class="wrapper wrapper-outer container-fluid">
-<div class="wrapper wrapper-inner container-fluid">
-	<ul class="nav nav-pills">
+	<ul class="nav nav-tabs">
 		<li role="presentation" class="dropdown">
 			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
 		      Endpoints <span class="caret"></span>
@@ -30,7 +29,7 @@
 	    		
 	    		<li role="separator" class="divider"></li>
 	    		<li class=""><a href="#">Separated link</a></li>
-		    </ul>
+			</ul>
 		</li>
 		
 	
@@ -60,6 +59,4 @@
 			<a href="#">Profile</a>
 		</li>
 	</ul>
-</div>	
-</div>	
 </nav>	
