--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,10 @@
 <div class="page-wrapper container-fluid">
 
 <form method="post" action="/login" class="form-horizontal">
-              
+<div class="close-form-button container-fluid">                
+
+<a href="/"><input type="button" class="btn btn-default btn-xs-close" aria-label="Close" value="&times;"></a>
+
 
                <!------------------------------FORM-CONTENT-CONTAINER-->
               <div class="authentication-page container col-xs-8 col-xs-offset-2"> 
@@ -40,6 +43,7 @@
                     </div>
                 </div> 
               </div> <!------------------------------FORM-CONTENT-CONTAINER -->
+</div>
 </form>
 </div>
 
