--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <div class="navbar navbar-bottom navbar-fixed-bottom">
-	<footer class="container-fluid text-center">
+	<footer id="footer"class="container-fluid text-center">
 			<p> DevByT &copy; 2017 </p>
 	</footer>
 </div>
