--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,9 +11,9 @@
 
 
 	<div class="container list-group-item"><!------MAIN BODY LAYERING STARTS HERE---- -->
-        		<div class="col-sm-8">
-            		<div class="accordion-wrapper">
-		                <div class="panel-group" id="accordion2" role="tablist" aria-multiselectable="true">
+        <div class="col-xs-8 col-xs-1 col-md-6 col-md-offset-2">
+            <div class="accordion-wrapper">
+		        <div class="panel-group" id="accordion2" role="tablist" aria-multiselectable="true">
 
 
 
