--- a/views/partials/champion_search.ejs
+++ b/views/partials/champion_search.ejs
@@ -28,13 +28,9 @@
 	</div>
 </div>
 
-
-
-
-<section id="champion_container" class="container">
+	<section id="champion_container" class="container">
 		<div class="container-fluid">
 			<div class="row">
-
 				<div class=" col-xs-12 col-md-10 col-md-offset-1">
 					<% if (currentUser) { %>
 						<h5 id="current_User"> <%= thisUser %> </h5>
@@ -43,13 +39,17 @@
 					<% } %>	
 				</div>
 			</div>
-
-			<!--Where Champs Go-->
-			<div id='champions'>
+			
+			<div id=champion_backframe container-fluid>
+				<div class="row">
+				<!--Where Champs Go-->
+					<div id='champions'>
+					</div>
+				<!--Where Champs Stop -->
+				</div>
 			</div>
-			<!--Where Champs Stop -->
 		</div>
-</section>
+	</section>
 
 <!-- begin champModal: this is not visible until you call .modal() on it -->
 <div class="modal fade" tabindex="-1" role="dialog" id="champModal">
@@ -57,67 +57,51 @@
     <div class="modal-content">
 
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <button type="button" class="btn btn-xs close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title">Champion Name</h4>
       </div>
 
-      <div class="modal-body">
-
-			<form id="addToFavs" method="post" action="/login" class="form-horizontal">
-              <div class="container">  <!------------------------------FORM-CONTENT-CONTAINER-->
+    <div class="modal-body">
+		<form id="addToFavs" method="post" action="/login" class="form-horizontal">
+            <div class="container">  <!------------------------------FORM-CONTENT-CONTAINER-->
                 <div class="col-xs-10 col-xs-offset-1">
                     <div class="row">
                       <div class="col-xs-4 col-xs-offset-1 text-center">
-                        <h1>Login</h1>
+                        <h1 class="page-name">Champion</h1>
                       </div>
                     </div>								<!-- END ROW1-->
 				    <div class="row">
 					
 					<!-- CHAMPION PROFILE IMAGE-->
-						<div class="form-group">
-				        	<div class="col-xs-2">
-				        		<div class="champ_profile_img">
-				        			<img class="img img-responsive" src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/Aatrox_0.jpg">
+							<div class="form-group col-xs-2">
+				        		<div class="champ_profile_img col-xs-12">
+				        			<img class="img img-responsive" 
+				        			src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/
+				        			<%console.log("sanitycheckdaflkja;lkdfjldkjfa;lkdsjf;akd")%>
+				        			Aatrox_0.jpg">
 				        		</div> 
 				        	</div>
                     <!-- CHAMPION INPUTS -->
 							<div class="col-xs-6">
 								<div class="input-group">
-
-      								<input type="text" class="form-control" value="Champion">
+      								<input type="text" class="sr-only form-control" value="Champion">
       								<span class="input-group-btn">
     									<button id="addChamp" class="btn btn-default" type="button">
     										<span class="glyphicon glyphicon-plus-sign">
     											<!-- glyphicon-minus-sign  (remove favorite) -->
     										</span>
-    									</button></span>
-    							</div><!-- /input-group -->
-									
-
-
-									<!-- <label class="sr-only" for="champion_name" >Champion Name</label>
-										<span><label class="" for="champion_name" >Champion Name</label>
-
-											<input class="form-control" type="text" name="champion_name" id="champion_name" value="champion name">
-										</span>
-	                        		<label class="sr-only" for="currentUser">Current User</label>
-	                        		<input class="form-control" type="text" name="currentUser" id="currentUser">
-								</div> -->
+    									</button>
+    								</span>
+    							</div><!-- /input-group -->									
 							</div>
-						</div>
+					</div>
+                </div>	
+							<!-- END ROW2-->
 
-                    </div>								<!-- END ROW2-->
+            	</div> 
+            </div> <!------------------------------       			FORM-CONTENT-CONTAINER -->
+		</form>
 
-				    <div class="row">
-	                    <div class="form-group">
- 
-	                    </div>
-                    </div>								<!-- END ROW3-->
-                </div> 
-              </div> <!------------------------------       			FORM-CONTENT-CONTAINER -->
-			</form>
-
-      </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
