--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -9,10 +9,12 @@
 <div class="page-wrapper container-fluid">
 
 <form method="post" action="/signup" class="form-horizontal">
-              
+<div class="close-form-button container-fluid">                
+<a href="/"><input type="button" class="btn btn-default btn-xs-close" aria-label="Close" value="&times;"></a>
 
                <!------------------------------FORM-CONTENT-CONTAINER-->
               <div class="authentication-page container col-xs-8 col-xs-offset-2"> 
+
                 <div class="padding-layer col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
                     <div class="row">
                       <div class="col-xs-10 col-xs-offset-1 text-center">
@@ -44,6 +46,7 @@
                     </div>
                 </div> 
               </div> <!------------------------------FORM-CONTENT-CONTAINER -->
+</div>              
 </form>
 </div>
 
