--- a/views/partials/champion_search.ejs
+++ b/views/partials/champion_search.ejs
@@ -55,52 +55,10 @@
 <div class="modal fade" tabindex="-1" role="dialog" id="champModal">
   <div class="modal-dialog">
     <div class="modal-content">
-
-      <div class="modal-header">
-        <button type="button" class="btn btn-xs close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Champion Name</h4>
-      </div>
-
-    <div class="modal-body">
-		<form id="addToFavs" method="post" action="/login" class="form-horizontal">
-            <div class="container">  <!------------------------------FORM-CONTENT-CONTAINER-->
-                <div class="col-xs-10 col-xs-offset-1">
-                    <div class="row">
-                      <div class="col-xs-4 col-xs-offset-1 text-center">
-                        <h1 class="page-name">Champion</h1>
-                      </div>
-                    </div>								<!-- END ROW1-->
-				    <div class="row">
-					
-					<!-- CHAMPION PROFILE IMAGE-->
-							<div class="form-group col-xs-2">
-				        		<div class="champ_profile_img col-xs-12">
-				        			<img class="img img-responsive" 
-				        			src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/
-				        			<%console.log("sanitycheckdaflkja;lkdfjldkjfa;lkdsjf;akd")%>
-				        			Aatrox_0.jpg">
-				        		</div> 
-				        	</div>
-                    <!-- CHAMPION INPUTS -->
-							<div class="col-xs-6">
-								<div class="input-group">
-      								<input type="text" class="sr-only form-control" value="Champion">
-      								<span class="input-group-btn">
-    									<button id="addChamp" class="btn btn-default" type="button">
-    										<span class="glyphicon glyphicon-plus-sign">
-    											<!-- glyphicon-minus-sign  (remove favorite) -->
-    										</span>
-    									</button>
-    								</span>
-    							</div><!-- /input-group -->									
-							</div>
-					</div>
-                </div>	
-							<!-- END ROW2-->
-
-            	</div> 
-            </div> <!------------------------------       			FORM-CONTENT-CONTAINER -->
-		</form>
+		
+		<!--Where Modals Go-->
+		<div id='champion_modal'>
+		</div>
 
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
