--- a/views/partials/champion_search.ejs
+++ b/views/partials/champion_search.ejs
@@ -55,7 +55,11 @@
 <div class="modal fade" tabindex="-1" role="dialog" id="champModal">
   <div class="modal-dialog">
     <div class="modal-content">
-		
+		<div class='modal-header'>
+        	<button type='button' class='btn btn-xs close' data-dismiss='modal' aria-label='Close'>
+        		<span aria-hidden='true'>&times;</span>
+        	</button>
+        </div>
 		<!--Where Modals Go-->
 		<div id='champion_modal'>
 		</div>
