--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,13 +1,17 @@
 <% include ./partials/head %>
 	
-	<div class="container-fluid">
-	<% if(currentUser) { %>
+<div class="container-fluid">
+<% if(currentUser) { %>
+	<h1 class="page-title text-center"><%= currentUser.summoner.name  %></h1>
+<% } else { %>
+	<h1 class="page-title text-center">Summoner Name</h1>
+<% } %>
 
-		<h1 class="page-title text-center"><%= currentUser.summoner.name  %></h1>
-	<% } else { %>
-		<h1 class="page-title text-center">Summoner Name</h1>
-	<% } %>
-	</div>
+
+
+
+
+
 
 
 	<div class="container list-group-item"><!------MAIN BODY LAYERING STARTS HERE---- -->
@@ -16,71 +20,6 @@
 		        <div class="panel-group" id="accordion2" role="tablist" aria-multiselectable="true">
 
 
-
-				<!--CODE FOR AN IMAGE CAROUSEL -->
-		                   <!--  <div class="panel panel-default">
-		                        <div class="panel-heading" role="tab" id="headingTwo">
-		                			<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-		                				<h4 class="panel-title">Your Favorite Champs</h4>
-		                			</a>
-		                        </div>
-		                        <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-		                            <div class="panel-body">		                            	
-		     
-		          	<div class="row">
-												<div id="favorite-champ-carousel" class="carousel slide" data-ride="carousel"> -->
-												  <!-- Indicators -->
-													<!-- <ol class="carousel-indicators">
-												    	<li data-target="#favorite-champ-carousel" data-slide-to="0" class="active"></li>
-												    	<li data-target="#favorite-champ-carousel" data-slide-to="1"></li>
-												    	<li data-target="#favorite-champ-carousel" data-slide-to="2"></li>
-												    </ol> -->
-
-												  <!-- Wrapper for slides -->
-							<!-- 					  	<div class="carousel-inner" role="listbox">
-												    
-												    	<div class="item active">
-															<img class="img img-responsive fav-champ-img" src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/Aatrox_0.jpg">
-								    	
-													    	<div class="carousel-caption"></div>
-												    	</div>
-
-												    	<div class="item">
-															<img class="img img-responsive fav-champ-img" src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/Veigar_0.jpg">
-													    	<div class="carousel-caption"></div>
-												    	</div>
-													</div>
- -->
-												<!-- Controls -->
-									<!-- 			<a class="left carousel-control" href="#favorite-champ-carousel" role="button" data-slide="prev">
-												  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-												  <span class="sr-only">Previous</span>
-												</a>
-												<a class="right carousel-control" href="#favorite-champ-carousel" role="button" data-slide="next">
-												  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-												  <span class="sr-only">Next</span>
-												</a>
-											</div>
-		                            	</div>
-
-
-		                            	<div class="row">
-											<div class="container-fluid">
-												<div class="col-sm-12 text-right">
-												
-												<% if (currentUser) { %>
-													<a href="/champions">
-												    <input class="col-xs-8 col-xs-offset-2 btn btn-default">
-												    </a>
-												<% } else { %>
-													<a href="./champions"><button class="btn btn-def">Champions</button>
-												<% } %>
-												</div>
-											</div>
-										</div>
-		                            </div>
-		                        </div> --> <!--a carousel to display the favorites list possibly  -->
-		                  <!--   </div> -->
 
 		                    <div class="panel panel-default">
 		                        <div class="panel-heading" role="tab" id="headingThree">
@@ -109,20 +48,34 @@
 		                        </div>
 		                        <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 		                            <div class="panel-body">
-		                                <div class="row">
-		                                	<ul id="favorite_list">
-		                                	<% if (currentUser) { %>
+		                                	<ul id="favorite_list" class='list-group'>
+		                                	<% if(currentUser) { %>
+											
 											<% var myFavs = currentUser.favorites %>
-		                                	<% for(var i = 0; i < myFavs.length; i++){ %>
+											<% for(var i = 0; i < myFavs.length; i++) { %>
+														<!-- <li> <%= myFavs[i].key %> </li> -->
 		                                		
 
-		                                		<li><%= myFavs[i] %></li>
-		                                	<% } %>
+
+<li class="list-group-item">
+	<div class='row container'>
+		<div class="col-xs-4 col-xs-offset-1">
+			<div class="container img-frame">
+				<img class="img img-thumbnail img-responsive" 
+				src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/<%= myFavs[i].key %>.png" >
+			</div>
+		</div>
+		<div class="col-xs-6 text-center">
+			<%= myFavs[i].key %>
+		</div>
+	</div>
+</li>
+											<% } %>
+                                			<% } %>
 		                                	<!--ADD CHAMPIONS TO LIST HERE -->
-		                                	<% } %>
+		                                	
 		                                	</ul>
 		                                </div>
-
 		                            </div>
 		                        </div>
 		                    </div>
@@ -184,4 +137,63 @@
 					<br>
 
 				</div> -->
+
+				<!--CODE FOR AN IMAGE CAROUSEL -->
+		                   <!--  <div class="panel panel-default">
+		                        <div class="panel-heading" role="tab" id="headingTwo">
+		                			<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+		                				<h4 class="panel-title">Your Favorite Champs</h4>
+		                			</a>
+		                        </div>
+		                        <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+		                            <div class="panel-body">		                            	
+		     
+		          	<div class="row">
+												<div id="favorite-champ-carousel" class="carousel slide" data-ride="carousel"> -->
+												  <!-- Indicators -->
+													<!-- <ol class="carousel-indicators">
+												    	<li data-target="#favorite-champ-carousel" data-slide-to="0" class="active"></li>
+												    	<li data-target="#favorite-champ-carousel" data-slide-to="1"></li>
+												    	<li data-target="#favorite-champ-carousel" data-slide-to="2"></li>
+												    </ol> -->
+
+												  <!-- Wrapper for slides -->
+							<!-- 					  	<div class="carousel-inner" role="listbox">
+												    
+												    	<div class="item active">
+															<img class="img img-responsive fav-champ-img" src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/Aatrox_0.jpg">
+								    	
+													    	<div class="carousel-caption"></div>
+												    	</div>
+
+												    	<div class="item">
+															<img class="img img-responsive fav-champ-img" src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/Veigar_0.jpg">
+													    	<div class="carousel-caption"></div>
+												    	</div>
+													</div>
+ -->
+												<!-- Controls -->
+									<!-- 			<a class="left carousel-control" href="#favorite-champ-carousel" role="button" data-slide="prev">
+												  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+												  <span class="sr-only">Previous</span>
+												</a>
+												<a class="right carousel-control" href="#favorite-champ-carousel" role="button" data-slide="next">
+												  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+												  <span class="sr-only">Next</span>
+												</a>
+											</div>
+		                            	</div>
+
+
+		                            	<div class="row">
+											<div class="container-fluid">
+												<div class="col-sm-12 text-right">
+												
+										
+												</div>
+											</div>
+										</div>
+		                            </div>
+		                        </div> --> <!--a carousel to display the favorites list possibly  -->
+		                  <!--   </div> -->
 
