--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -54,17 +54,23 @@
 											<% var myFavs = currentUser.favorites %>
 											<% for(var i = 0; i < myFavs.length; i++) { %>
 											
-												<li class="list-group-item">
+												<li class="favorite-list-item list-group-item">
 													<div class='row container'>
-														<div class="col-xs-4 col-xs-offset-1">
+														<div class="col-xs-3 col-xs-offset-1">
 															<div class="container img-frame">
 																<img class="img img-thumbnail img-responsive" 
 																src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/champion/<%= myFavs[i].key %>.png" >
 															</div>
 														</div>
-														<div class="col-xs-6 text-center">
-															<%= myFavs[i].key %>
-														</div>
+															<div class="col-xs-3 text-center">
+																<%= myFavs[i].title %>
+															</div>
+															<div class="col-xs-3 text-center">
+																<%= myFavs[i].key %>
+															</div>
+															<div class="col-xs-1">
+																<button class="remove-favorite btn btn-defaul btn-xs"><span class="glyphicon glyphicon-trash"></span></button>
+															</div>
 													</div>
 												</li>
 												
