--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -69,7 +69,7 @@
 																<%= myFavs[i].key %>
 														</div>
 														<div class="col-xs-1">
-																<button class="remove-favorite btn btn-defaul btn-xs"><span class="glyphicon glyphicon-trash"></span></button>
+																<button class="remove-favorite btn btn-xs"><span class="glyphicon glyphicon-trash"></span></button>
 														</div>
 													</div>
 												</li>
