--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -6,12 +6,21 @@
 <div id="landingContainer" class="container-fluid">
   <div class="col-xs-12 col-sm-10 col-sm-offset-1">
     <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 container">
+      
       <div id="landingContent" class="col-xs-12 col-md-8 col-md-offset-2 container">
-        <a href="/login"><button class="col-xs-12 col-md-5 col-md-offset-1 btn-md btn btn-default">Login</button></a>
-        <a href="/signup"><button class="col-xs-12 col-md-5  btn-md btn btn-default">Register</button></a>
+        <div class="row container ">
+          <input type="image" name="league_logo.png" id='landingLayer' class='col-xs-12'>
+        </div>
+     
+      <div class="row">
+        <!-- <h3 class="title-words text-center">Summoner.io</h3> -->
+        <a href="/login"><button class="col-xs-12 col-md-8 col-md-offset-2 btn-md btn btn-default">Login</button></a>
+        <a href="/signup"><button class="col-xs-12 col-md-8  col-md-offset-2 btn-md btn btn-default">Register</button></a>
       </div> 
+       </div>
     </div>
   </div> 
+</div>
 </div>
 <script
   src="http://code.jquery.com/jquery-3.2.1.min.js"
