--- a/views/partials/champion_search.ejs
+++ b/views/partials/champion_search.ejs
@@ -8,19 +8,29 @@
 		<form method="get" action="/profile/summonner">		
 			
 			<div class="form-group col-sm-6">
-				<div class="input-group">
-					<span class="input-group-btn">
-						<button class="btn btn-default">Go</button>
-				    </span>
-				    <input class="form-control" type="text" name="list-item" placeholder="Search by name">
-				</div>
+				<div class="row">
+					<div class="input-group">
+						<span class="input-group-btn">
+							<button class="btn btn-default">Go</button>
+				    	</span>
+				    	<input class="form-control" type="text" name="list-item" placeholder="Search by name">
+					</div>
+		    	</div>
+		    	<div class="row">
+					<div class="input-group">
+						<label for=""><input type="radio" name="">label</label>
+						<label for=""><input type="radio" name="">label</label>
+						<label for=""><input type="radio" name="">label</label>
+					</div>
+		    	</div>
 		    </div>
 				
 
 			<div class="form-group col-sm-6">
 				<div class="input-group">
-				<span class="label label-default">label</span> 
-				<input type="checkbox" name="Search">
+					<label for="filter-search" class="label">
+						<input id="filter-search" class="btn btn-default" type="button" name="filter-search">
+					</label> 
 				</div>
 			</div>
 
