--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -5,16 +5,21 @@
 
 <div id="landingContainer" class="container-fluid">
   <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-    <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 container">
-      <div id="landingContent" class="col-xs-12 col-md-8 col-md-offset-2 container">
-        <a href="/login"><button class="col-xs-12 col-md-5 col-md-offset-1 btn-md btn btn-default">Login</button></a>
-        <a href="/signup"><button class="col-xs-12 col-md-5  btn-md btn btn-default">Register</button></a>
-      </div> 
-    </div>
-  </div> 
+
+    <div id="landingContent" class="col-xs-12 col-md-8 col-md-offset-2 container">
+      <div class="row container-fluid">
+      <div class="col-summnr-container">
+      </div>
+      </div>
+      <div class="landing-button-container container col-xs-12">
+        <a href="/login"><button class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 btn-md btn btn-default">Login</button></a>
+        <a href="/signup"><button class="col-xs-10 col-md-8 col-xs-offset-1 col-md-offset-2  btn-md btn btn-default">Register</button></a>
+        </div>
+    </div> 
+</div>
 </div>
 <script
-  src="http://code.jquery.com/jquery-3.2.1.min.js"
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
   <script 
