fixes brand img on nav

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -18,7 +18,7 @@
 
 	<ul class="nav nav-tabs">
 		<li href="#">
-    		<img src="../../public/images/lol.png" width="30" height="30" alt="">
+    		<img src="/images/lol.png" width="30" height="30" alt="">
   		</li>
 		<li role="presentation" class="dropdown">
 			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
